--- a/RegisterandLoginForm/Views/Shared/_Layout.cshtml
+++ b/RegisterandLoginForm/Views/Shared/_Layout.cshtml
@@ -12,14 +12,19 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand text-white mx-auto" asp-area="" asp-controller="Student" asp-action="Register">REGISTER AND LOGIN</a>
+                <a class="navbar-brand text-white position-absolute start-50 translate-middle-x"
+                   asp-area="" asp-controller="Student" asp-action="Register">
+                    REGISTER AND LOGIN
+                </a>                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                    <ul class="navbar-nav flex-grow-1 ms-auto">
+                        <li class="nav-item ">
+                            <a class="nav-link text-white " asp-controller="Account" asp-action="Login">Login</a>
+                        </li>
                         
                     </ul>
                 </div>
