--- a/RegisterandLoginForm/Views/Shared/_Layout.cshtml
+++ b/RegisterandLoginForm/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white position-absolute start-50 translate-middle-x"
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3 position-fixed w-100 top-0 h-0 py-1">
+            <div class="container-fluid ">
+                <a class="navbar-brand text-white "
                    asp-area="" asp-controller="Student" asp-action="Register">
                     REGISTER AND LOGIN
                 </a>                
